# WEB_HW10

./: .gitignore  pyproject.toml
mysite_quotes/: .env  .gitignore  db.sqlite3  manage.py
mysite_quotes/mysite_quotes/: asgi.py  settings.py  urls.py  wsgi.py
mysite_quotes/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
mysite_quotes/quotes/migrations/: 0001_initial.py  0002_author_tag_quotes_delete_choice_delete_question.py
mysite_quotes/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  author.html  base.html  index.html
mysite_quotes/quotes/templatetags/: extract.py
mysite_quotes/users/: forms.py  views.py
mysite_quotes/users/migrations/: 0001_initial.py
mysite_quotes/users/templates/users/: login.html  signup.html
mysite_quotes/utils/: migration.py
