[tool.poetry]
name = "web-hw10"
version = "0.1.0"
description = ""
authors = ["RHA1705 <garbarzroman47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
pymongo = "^4.10.1"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
